crates/klio-parser/tests/snapshots/corpus__arithmetic_precedence.snap
---
source: crates/ktc-parser/tests/corpus.rs
expression: "fun main() {\n    val a = 1 + 2 * 3\n    val b = (1 + 2) * 3\n    val c = 10 - 4 - 2\n    val d = -1 + +2\n    val e = !true && false || true\n    val f = 1 < 2 && 3 >= 2\n    val g = a == b || a != c\n    val h = 1..10\n    val i = 1..<10\n    val j = a ?: b\n}\n"
---
# ast
fun main()
  body=block
    stmt-decl
      val a
        init=
          binop +
            int 1
            binop *
              int 2
              int 3
    stmt-decl
      val b
        init=
          binop *
            binop +
              int 1
              int 2
            int 3
    stmt-decl
      val c
        init=
          binop -
            binop -
              int 10
              int 4
            int 2
    stmt-decl
      val d
        init=
          binop +
            unop -
              int 1
            unop +
              int 2
    stmt-decl
      val e
        init=
          binop ||
            binop &&
              unop !
                bool true
              bool false
            bool true
    stmt-decl
      val f
        init=
          binop &&
            binop <
              int 1
              int 2
            binop >=
              int 3
              int 2
    stmt-decl
      val g
        init=
          binop ||
            binop ==
              path a
              path b
            binop !=
              path a
              path c
    stmt-decl
      val h
        init=
          binop ..
            int 1
            int 10
    stmt-decl
      val i
        init=
          binop ..<
            int 1
            int 10
    stmt-decl
      val j
        init=
          binop ?:
            path a
            path b
