crates/klio-parser/tests/snapshots/corpus__control_flow.snap
---
source: crates/ktc-parser/tests/corpus.rs
expression: "fun main() {\n    val x = 5\n    val sign = if (x > 0) 1 else if (x < 0) -1 else 0\n\n    var i = 0\n    while (i < 10) {\n        if (i == 5) break\n        if (i == 3) {\n            i = i + 1\n            continue\n        }\n        i = i + 1\n    }\n\n    for (k in 1..3) {\n        println(k)\n    }\n\n    fun early(): Int {\n        return 7\n    }\n}\n"
---
# ast
fun main()
  body=block
    stmt-decl
      val x
        init=
          int 5
    stmt-decl
      val sign
        init=
          if
            cond=
              binop >
                path x
                int 0
            then=
              int 1
            else=
              if
                cond=
                  binop <
                    path x
                    int 0
                then=
                  unop -
                    int 1
                else=
                  int 0
    stmt-decl
      var i
        init=
          int 0
    stmt-expr
      while
        cond=
          binop <
            path i
            int 10
        body=
          block
            stmt-expr
              if
                cond=
                  binop ==
                    path i
                    int 5
                then=
                  break
            stmt-expr
              if
                cond=
                  binop ==
                    path i
                    int 3
                then=
                  block
                    assign =
                      target=
                        path i
                      value=
                        binop +
                          path i
                          int 1
                    stmt-expr
                      continue
            assign =
              target=
                path i
              value=
                binop +
                  path i
                  int 1
    stmt-expr
      for (k)
        iter=
          binop ..
            int 1
            int 3
        body=
          block
            stmt-expr
              call (#args=1)
                callee=
                  path println
                arg[0]=
                  path k
    stmt-decl
      fun early():Int
        body=block
          stmt-expr
            return
              int 7
