crates/klio-parser/tests/snapshots/corpus__declarations.snap
---
source: crates/ktc-parser/tests/corpus.rs
expression: "val topProp: Int = 1\nvar mutTop = \"hi\"\n\nfun add(a: Int, b: Int): Int {\n    return a + b\n}\n\nfun greet(name: String = \"world\"): String {\n    val message = \"hi $name\"\n    return message\n}\n"
---
# ast
val topProp:Int
  init=
    int 1
var mutTop
  init=
    string-template
      text "hi"
fun add(a:Int,b:Int):Int
  body=block
    stmt-expr
      return
        binop +
          path a
          path b
fun greet(name:String):String
  body=block
    stmt-decl
      val message
        init=
          string-template
            text "hi "
            short-interp $name
    stmt-expr
      return
        path message
