crates/klio-parser/tests/snapshots/corpus__diag_import_after_decl.snap
---
source: crates/klio-parser/tests/corpus.rs
assertion_line: 397
expression: "package foo\n\nfun main() {}\n\nimport kotlin.math.PI\n"
---
# ast
package foo
fun main()
  body=block

# diagnostics
[P0046] Error `import` directives must appear before any declaration @28..34
