crates/klio-parser/tests/snapshots/corpus__diag_import_empty.snap
---
source: crates/klio-parser/tests/corpus.rs
assertion_line: 393
expression: "import\nfun main() {}\n"
---
# ast
import 
fun main()
  body=block

# diagnostics
[P0047] Error malformed import: missing path @0..6
