crates/klio-parser/tests/snapshots/corpus__diag_import_trailing_dot.snap
---
source: crates/klio-parser/tests/corpus.rs
assertion_line: 394
expression: "import kotlin.\n\nfun main() {}\n"
---
# ast
import kotlin
fun main()
  body=block

# diagnostics
[P0047] Error malformed import: trailing `.` with no segment @13..14
