crates/klio-parser/tests/snapshots/corpus__diag_package_after_imports.snap
---
source: crates/klio-parser/tests/corpus.rs
assertion_line: 395
expression: "import kotlin.math.PI\npackage foo\n\nfun main() {}\n"
---
# ast
import kotlin.math.PI
fun main()
  body=block

# diagnostics
[P0045] Error `package` header must come before any import or declaration @22..29
