crates/klio-parser/tests/snapshots/corpus__package_and_imports.snap
---
source: crates/ktc-parser/tests/corpus.rs
expression: "package com.example.app\n\nimport kotlin.math.PI\nimport kotlin.collections.List as KList\nimport kotlin.text.*\n\nfun main() {\n    println(PI)\n}\n"
---
# ast
package com.example.app
import kotlin.math.PI
import kotlin.collections.List as KList
import kotlin.text.*
fun main()
  body=block
    stmt-expr
      call (#args=1)
        callee=
          path println
        arg[0]=
          path PI
